skill-segment仓库合并过来

--- a/ES/值传递.md
+++ b/ES/值传递.md
@@ -1,8 +1,10 @@
+
+
 值传递应该是JS最基本的一个知识点了，网上也有很多说法，有按值传递，有按引用传递，还有按共享传递。what？
 
 
 
-### 先说结论
+## 先说结论
 
 我一直认为，学习应该去刨根问底。抓住他的核心点，找到事物的本质。所以在这里从新给大家梳理下。
 
@@ -14,7 +16,7 @@
 
 
 
-### 数据类型
+## 数据类型
 
 标准规定，JavaScript 有 6种 基本类型，`string` `number` `boolean` `null` `undefined` `symbol`
 和`Object`类型
@@ -23,7 +25,7 @@
 
 
 
-### 堆栈结构
+## 堆栈结构
 
 内存是分为栈区和堆区的
 
@@ -35,7 +37,7 @@
 
 
 
-### 知识延伸
+## 知识延伸
 
 标准里面规定了，所有基本类型的值都是**不可改变**的。
 
@@ -61,7 +63,7 @@ a = 2;
 
 
 
-### 值传递
+## 值传递
 
 上面的东西我们都明白了，现在我们再来看看按值传递是怎么回事。
 
@@ -130,7 +132,7 @@ a.x  // 1
 
 
 
-### 扩展 const
+## 扩展 const
 
 通过以上内容是不是就彻底搞清楚了值传递到底是怎么回事了。所有的传递方式其实都是按值传递，只不过有的值是基本类型，有的值是内存地址。
 
